# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
